--- a/i18n/fr.json
+++ b/i18n/fr.json
@@ -17,7 +17,7 @@
       "alt": "Jade Fillet"
     },
     "title": "Qui suis-je ?",
-    "summary": "Very sociable, smiling, motivated and dynamic, I am passionate about graphics and design, I master Illustrator, InDesign, Photoshop and Lightroom. I also practice photography and special effects makeup in my spare time. After a BAC + 3 in Graphics and Design, I want to continue my studies on a 2-year master's degree specialized in artistic direction.",
+    "summary": "Très sociable, souriante, motivée et dynamique, je suis passionnée par le graphisme et le design, je sais maîtriser Illustrator, InDesign, Photoshop, Lightroom. Je pratique également la photographie et le maquillage effets spéciaux dans mon temps libre. Après un bac + 3 en Graphisme et Design, je souhaite poursuivre mes études sur un master de 2 ans en me spécialisant dans la direction artistique.",
     "skills": [{
         "icon": "#message",
         "label": "Community Management"
